--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 #root {
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   font-family: sans-serif;
+  background-color: black;
+}
+
+.appContainer {
+  display: flex;
+  min-height: 100vh;
 }
