Refactor image handling and update component and directories names

--- a/src/components/ImgCanvas/ImgCanvas.module.scss
+++ b/src/components/ImgCanvas/ImgCanvas.module.scss
@@ -1,5 +1,6 @@
 .imgCanvasContainer {
-  width: 80%;
+  width: 85%;
+  min-width: 85%;
   height: 93dvh;
   overflow: hidden;
   overflow-y: scroll;
